feat(scenario-service): add scenario snapshots
